# math-ide

./: .cursorrules  .flake8  .gitignore  README.md  deploy.sh  mypy.ini  pyproject.toml  test_architecture.py  test_latex_fix.py  test_parametrized_example.py  test_placeholders.py  test_prompt.py  test_split_prompts.py  test_verification.py  todo.txt
.cursor/rules/: implementation_flow.mdc  project_structure.mdc  technical_stack.mdc
core/: __init__.py  engine.py  exceptions.py  gpt_client.py  history.py  parsers.py  prompts.py  types.py
core/engines/: __init__.py  branching_analyzer.py  progress_analyzer.py  solution_checker.py  transformation_applier.py  transformation_generator.py  transformation_verifier.py
docs/: PRD.mdc  PRD_prompt.txt  architecture.mdc  deployment.md  env.example  implementation_details.mdc  project_structure.mdc  refactoring_plan.mdc  technical_stack.mdc
examples/: model_logging_example.py
interfaces/: __init__.py  __main__.py  bot_runner.py  cli.py  telegram_bot.py  telegram_bot_new.py
interfaces/cli_components/: __init__.py  display_manager.py  input_handler.py  latex_renderer.py  solution_processor.py
interfaces/telegram/: __init__.py  handlers.py  keyboards.py  rate_limiter.py  renderers.py  state.py  utils.py
interfaces/telegram_bot/: __init__.py  __main__.py  handlers.py  keyboards.py  rate_limiter.py  renderers.py  state.py
prompts/: application_verification_system.md  application_verification_user.md  apply.md  branching.md  branching_system.md  branching_user.md  check.md  check_system.md  check_user.md  generation.md  generation_system.md  generation_user.md  progress_analysis.md  progress_analysis_system.md  progress_analysis_user.md  results_generation_system.md  results_generation_user.md  transformation_types.md  verification.md  verification_system.md  verification_user.md
scripts/: debug_service.sh  fix_service.sh  install_uv.sh  service_manager.sh
tests/: conftest.py  test_architecture.py  test_branching.py  test_branching_simple.py  test_engine.py  test_extract_math_expression.py  test_history_rollback.py  test_model_logging.py  test_parametrized_transformations.py
utils/: __init__.py  logging_utils.py  math_utils.py
